--- a/streamia/RailTableViewCell.xib
+++ b/streamia/RailTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -47,6 +47,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="collectionView" destination="CVI-0B-4zn" id="O1T-wy-0l6"/>
+                <outlet property="title" destination="lNn-9j-rJ0" id="WVd-Xb-6ak"/>
             </connections>
             <point key="canvasLocation" x="178" y="110"/>
         </tableViewCell>
